--- a/.github/workflows/my-jobs.yml
+++ b/.github/workflows/my-jobs.yml
@@ -5,7 +5,7 @@ on:
       - main
 jobs:
   build_and_deploy:
-    runs-on: [self-hosted, command]
+    runs-on: [self-hosted]
     env:
       CONTAINER_NAME: myappCommandContainer
     steps:
