--- a/MBS-COMMAND.API/appsettings.json
+++ b/MBS-COMMAND.API/appsettings.json
@@ -1,9 +1,49 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "ConnectionStrings": "Server=14.225.205.54;Database=AntreeDB;Uid=sa;Pwd=Thientan291157@;Trust Server Certificate=True;",
+    "Redis": "103.162.14.116:6379"
+  },
+  "JwtOption": {
+    "Issuer": "http://103.162.14.116:8080",
+    "Audience": "http://103.162.14.116:8080",
+    "SecretKey": "oEZqUKrrKDKP7A9OtrB4GfPGJ92vLDpKakaka",
+    "ExpireMin": 5
+  },
+  "SqlServerRetryOptions": {
+    "MaxRetryCount": 5,
+    "MaxRetryDelay": "00:00:05",
+    "ErrorNumbersToAdd": []
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Warning",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "Theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/log-.txt",
+          "rollingInterval": "Day",
+          "shared": true
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ]
   },
   "AllowedHosts": "*"
 }
