--- a/MBS_COMMAND.Application/MBS_COMMAND.Application.csproj
+++ b/MBS_COMMAND.Application/MBS_COMMAND.Application.csproj
@@ -12,4 +12,17 @@
       <ProjectReference Include="..\MBS_COMMAND.Persistence\MBS_COMMAND.Persistence.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="FluentValidation" Version="11.9.2" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.2" />
+      <PackageReference Include="MediatR" Version="12.4.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="UserCases\Commands\" />
+      <Folder Include="UserCases\Queries\" />
+    </ItemGroup>
+
 </Project>
