--- a/MBS_COMMAND.Contract/MBS_COMMAND.Contract.csproj
+++ b/MBS_COMMAND.Contract/MBS_COMMAND.Contract.csproj
@@ -6,4 +6,19 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Ardalis.SmartEnum" Version="8.0.0" />
+      <PackageReference Include="FluentValidation" Version="11.9.2" />
+      <PackageReference Include="MassTransit" Version="8.2.5" />
+      <PackageReference Include="MediatR" Version="12.4.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
+      <PackageReference Include="MongoDB.Bson" Version="2.28.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Services\Slots\" />
+      <Folder Include="Services\Users\Validators\" />
+    </ItemGroup>
+
 </Project>
