--- a/MBS_COMMAND.Domain/MBS_COMMAND.Domain.csproj
+++ b/MBS_COMMAND.Domain/MBS_COMMAND.Domain.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\MBS_COMMAND.Contract\MBS_COMMAND.Contract.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Entities\" />
+    </ItemGroup>
+
 </Project>
