--- a/MBS_COMMAND.Infrastucture/MBS_COMMAND.Infrastucture.csproj
+++ b/MBS_COMMAND.Infrastucture/MBS_COMMAND.Infrastucture.csproj
@@ -14,4 +14,16 @@
       <Folder Include="DependencyInjection\Extensions\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="CloudinaryDotNet" Version="1.26.2" />
+      <PackageReference Include="MassTransit" Version="8.2.5" />
+      <PackageReference Include="MassTransit.Newtonsoft" Version="8.2.5" />
+      <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.5" />
+      <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.7" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="Quartz" Version="3.13.0" />
+      <PackageReference Include="Quartz.Extensions.Hosting" Version="3.13.0" />
+      <PackageReference Include="Serilog" Version="4.0.1" />
+    </ItemGroup>
+
 </Project>
