Add new entities and update EF Core migration
Updated `appsettings.Development.json` to change database and Redis connection strings. Added a new abstract class `Entity` in `Entity.cs` and simplified `IEntity.cs`. Removed an unnecessary `<ItemGroup>` from `MBS_COMMAND.Domain.csproj`. Updated `ApplicationDbContext.cs` to add and clean up `DbSet` properties. Added new constants in `TableNames.cs`. Updated `ApplicationDbContextModelSnapshot.cs` to include new entities and relationships. Added new entity classes and a configuration class for `Group_Student_Mapping`. Introduced a new migration file `20240927095211_v2.Designer.cs` to define the schema for various entities, including properties, constraints, and relationships.

--- a/MBS-COMMAND.API/appsettings.Development.json
+++ b/MBS-COMMAND.API/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "ConnectionStrings": "Server=14.225.205.54;Database=AntreeDB;Uid=sa;Pwd=Thientan291157@;Trust Server Certificate=True;",
-    "Redis": "103.162.14.116:6379"
+    "ConnectionStrings": "Server=103.185.184.35;Database=PRNSUPPER;Uid=sa;Pwd=AnhBiLongDaiKa@;Trust Server Certificate=True;",
+    "Redis": "103.185.184.35:6379,password=Thientan291157@,abortConnect=false"
   },
   "JwtOption": {
     "Issuer": "http://103.162.14.116:8080",
