--- a/MBS-COMMAND.API/appsettings.Development.json
+++ b/MBS-COMMAND.API/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "ConnectionStrings": "Server=14.225.205.54;Database=AntreeDB;Uid=sa;Pwd=Thientan291157@;Trust Server Certificate=True;",
-    "Redis": "103.162.14.116:6379"
+    "ConnectionStrings": "Server=103.162.14.116;Database=PRN_SUPER;Uid=sa;Pwd=MyStrongPassword123@;Trust Server Certificate=True;",
+    "Redis": "103.162.14.116:6379,password=MyStrongPassword123@,abortConnect=false"
   },
   "JwtOption": {
     "Issuer": "http://103.162.14.116:8080",
