Update DB connection, User entity, and schema
- Updated connection string in `appsettings.Development.json` to new server and database.
- Modified `User.cs`: removed `Gender` and `Phonenumber`, added `IsFirstLogin`.
- Updated `ApplicationDbContextModelSnapshot.cs` to reflect entity changes.
- Added log entries in `log-20240929.txt` for sensitive data logging.
- Added migration script `20240929111824_fix_entity.cs` for schema changes.
- Generated `20240929111824_fix_entity.Designer.cs` to update schema.

--- a/MBS-COMMAND.API/appsettings.Development.json
+++ b/MBS-COMMAND.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectionStrings": "Server=103.185.184.35;Database=PRNSUPPER;Uid=sa;Pwd=AnhBiLongDaiKa@;Trust Server Certificate=True;",
+    "ConnectionStrings": "Server=103.162.14.116;Database=PRN_SUPER;Uid=sa;Pwd=MyStrongPassword123@;Trust Server Certificate=True;",
     "Redis": "103.185.184.35:6379,password=Thientan291157@,abortConnect=false"
   },
   "JwtOption": {
