--- a/MBS-COMMAND.API/appsettings.json
+++ b/MBS-COMMAND.API/appsettings.json
@@ -10,16 +10,21 @@
     "ExpireMin": 5
   },
   "MasstransitConfiguration": {
-    "Host": "103.162.14.116",
-    "VHost": "myHost",
+    "Host": "localhost",
+    "VHost": "sieupham",
     "Port": 5672,
-    "UserName": "sa",
-    "Password": "MyStrongPassword123@"
+    "UserName": "guest",
+    "Password": "guest"
   },
   "MessageBusOptions": {
     "retryLimit": 3,
     "initialInterval": "00:00:05",
     "intervalIncrement": "00:00:10"
+  },
+  "CloudinaryOptions" : {
+    "CloudName": "dejf8mmou",
+    "ApiKey": "352838987568689",
+    "ApiSecret": "a3GLia6ovHgc-8xit46QEs8usWY"
   },
   "SqlServerRetryOptions": {
     "MaxRetryCount": 5,
