--- a/MBS-COMMAND.API/appsettings.json
+++ b/MBS-COMMAND.API/appsettings.json
@@ -10,11 +10,11 @@
     "ExpireMin": 5
   },
   "MasstransitConfiguration": {
-    "Host": "localhost",
-    "VHost": "sieupham",
+    "Host": "103.162.14.116",
+    "VHost": "myHost",
     "Port": 5672,
-    "UserName": "guest",
-    "Password": "guest"
+    "UserName": "sa",
+    "Password": "MyStrongPassword123@"
   },
   "MessageBusOptions": {
     "retryLimit": 3,
