Add Mail Services

--- a/MBS-COMMAND.API/appsettings.Development.json
+++ b/MBS-COMMAND.API/appsettings.Development.json
@@ -21,6 +21,13 @@
     "initialInterval": "00:00:05",
     "intervalIncrement": "00:00:10"
   },
+  "MailOption": {
+    "Mail": "contact.antreevn@gmail.com",
+    "DisplayName": "Antree",
+    "Password": "aymfdegtavaixpyo",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
   "CloudinaryOptions" : {
     "CloudName": "dejf8mmou",
     "ApiKey": "352838987568689",
