--- a/MBS-COMMAND.API/appsettings.json
+++ b/MBS-COMMAND.API/appsettings.json
@@ -26,6 +26,14 @@
     "ApiKey": "352838987568689",
     "ApiSecret": "a3GLia6ovHgc-8xit46QEs8usWY"
   },
+  ,
+  "MailOption": {
+    "Mail": "contact.antreevn@gmail.com",
+    "DisplayName": "Antree",
+    "Password": "aymfdegtavaixpyo",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
   "SqlServerRetryOptions": {
     "MaxRetryCount": 5,
     "MaxRetryDelay": "00:00:05",
