Refactor services and update command handlers
Refactored `CurrentUserService`, `CreateGroupCommandHandler`,
`CreateMentorCommandHandler`, and `MailService` for cleaner
constructor injection and removed redundant code. Updated
`AddMemberToGroupCommandHandler` to send emails via `IMailService`.

Removed `AddListMemberToGroupCommandHandler` and
`RemoveListMemberFromGroupCommandHandler`. Updated `Command`
class to remove related commands and add `ChangeLeader` command.
Added `ChangeLeaderCommandHandler`.

Updated `Slot` class to include `Month` property. Modified
`GroupApi` to update routes and require authorization for
`CreateGroup`.

Updated `appsettings.Development.json` and `appsettings.json`
for local server settings and email configurations.

--- a/MBS-COMMAND.API/appsettings.json
+++ b/MBS-COMMAND.API/appsettings.json
@@ -27,9 +27,9 @@
     "ApiSecret": "a3GLia6ovHgc-8xit46QEs8usWY"
   },
   "MailOption": {
-    "Mail": "contact.antreevn@gmail.com",
-    "DisplayName": "Antree",
-    "Password": "aymfdegtavaixpyo",
+    "Mail": "mentorbookingsystemfpt@gmail.com",
+    "DisplayName": "Mentor Booking System",
+    "Password": "123ANHIUEM456",
     "Host": "smtp.gmail.com",
     "Port": 587
   },
