--- a/MBS-COMMAND.API/appsettings.Development.json
+++ b/MBS-COMMAND.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectionStrings": "Server=103.162.14.116;Database=PRN_SUPER;Uid=sa;Pwd=MyStrongPassword123@;Trust Server Certificate=True;",
+    "ConnectionStrings": "Server=(local);Database=PRN_SUPER;Uid=sa;Pwd=12345;Trust Server Certificate=True;",
     "Redis": "103.162.14.116:6379,password=MyStrongPassword123@,abortConnect=false"
   },
   "JwtOption": {
@@ -10,11 +10,11 @@
     "ExpireMin": 5
   },
   "MasstransitConfiguration": {
-    "Host": "103.162.14.116",
-    "VHost": "myHost",
+    "Host": "local",
+    "VHost": "phucnghi",
     "Port": 5672,
-    "UserName": "sa",
-    "Password": "MyStrongPassword123@"
+    "UserName": "guest",
+    "Password": "guest"
   },
   "MessageBusOptions": {
     "retryLimit": 3,
@@ -69,5 +69,6 @@
       "WithThreadId"
     ]
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Domain" : "localhost:3000"
 }
